--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.4.3"
-    , "stylus": ">= 0.0.1"
-    , "jade": ">= 0.0.1"
-  }
+    "name": "express-radicase",
+    "version": "0.0.1",
+    "dependencies": {
+        "express": "2.4.3",
+        "formidable": "1.0.2",
+        "zip": "0.0.4",
+        "redis": "0.6.7",
+        "easy-oauth": "0.2.0"
+    }
 }
