--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ dump.rdb
 img
 keys_file.js
 public/stylesheets/style.css
+public/googleebd05104a11efb9b.html 
+static/ico 
+static/img 
 nginx_access.log
 nginx_error.log
