--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ img
 keys_file.js
 public/stylesheets/style.css
 public/googleebd05104a11efb9b.html 
-static/ico 
-static/img 
+*.swp
 nginx_access.log
 nginx_error.log
