--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "markdown": ">=0.2.1",
         "connect-form": ">=0.2.1",
         "redback": ">=0.2.7",
+        "toobusy": ">=0.2.3",
         "connect-assets": ">=2.3.3"
     }
 }
