--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "redback": "*",
         "toobusy": "*",
         "connect-assets": "*",
-        "multiparty": "*"
+        "multiparty": "*",
+        "easy-oauth": "*"
     }
 }
